# qi-fl-ids-iot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml
experiments/fl-iot-ids-v2/: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
experiments/fl-iot-ids-v2/artifacts/shared/: label_mapping.json
experiments/fl-iot-ids-v2/configs/: experiment_registry.yaml  global.yaml
experiments/fl-iot-ids-v2/configs/data/: absent_local.yaml  normal_noniid.yaml  rare_expert.yaml
experiments/fl-iot-ids-v2/configs/fl/: fedavg.yaml  fedavg_v1style.yaml  fedavg_v1style_focal.yaml  fedprox.yaml  fedprox_v1style.yaml  scaffold.yaml
experiments/fl-iot-ids-v2/configs/imbalance/: class_weights.yaml  focal_loss.yaml  focal_loss_gamma05.yaml  focal_loss_gamma1.yaml  focal_loss_weighted.yaml  light_oversampling.yaml  none.yaml
experiments/fl-iot-ids-v2/configs/model/: flat_34.yaml  flat_34_v1style.yaml  hierarchical.yaml
experiments/fl-iot-ids-v2/configs/nodes/: expert.yaml  node1.yaml  node2.yaml  node3.yaml
experiments/fl-iot-ids-v2/deployments/docker/: base.Dockerfile  client.Dockerfile  docker-compose.yml  server.Dockerfile
experiments/fl-iot-ids-v2/src/common/: config.py  logger.py  paths.py  registry.py  seeds.py  utils.py
experiments/fl-iot-ids-v2/src/data/: dataloader.py
experiments/fl-iot-ids-v2/src/scripts/: build_ablation_table.py  build_client_reports.py  fit_global_scaler.py  generate_global_weights.py  prepare_partitions.py  preprocess_node_data.py  run_experiment.py  validate_partition_scenario.py
experiments/fl-iot-ids-v2/src/tracking/: artifact_logger.py  mlflow_logger.py  run_naming.py
experiments/fl-iot-ids-v2/tests/: test_fedavg.py  test_metrics.py  test_preprocessing.py
experiments/fl-iot-ids-v3/: .env.example  .gitignore  README.md  VERSION  pyproject.toml  requirements.txt
experiments/fl-iot-ids-v3/configs/: experiment_registry.yaml  fl_config.yaml  global.yaml  model.yaml  model_factory_30rounds.yaml
experiments/fl-iot-ids-v3/configs/data/: absent_local.yaml  normal_noniid.yaml  rare_expert.yaml
experiments/fl-iot-ids-v3/configs/fl/: fedavg.yaml  fedavg_30rounds.yaml  fedavg_control.yaml  fedavg_v1style_focal.yaml  fedprox.yaml  multitier.yaml  qifa.yaml  qifa_formula.yaml  qifa_formula_30rounds.yaml  (+2 more)
experiments/fl-iot-ids-v3/docs/: data_pipeline.md
experiments/fl-iot-ids-v3/scripts/: run_model_factory.py  run_qi_benchmark_reduced.ps1  validate_model_factory_bundles.py
experiments/fl-iot-ids-v3/tests/: test_export_tier_models.py  test_fl_invariants.py  test_masked_aggregation.py  test_model.py  test_node_profiler.py  test_per_class_metrics.py  test_preprocessor.py  test_qi_feature_selection.py  test_qi_feature_selector.py  test_qifa_guard_strategy.py  test_qifa_strategy.py  test_run_preflight.py  test_supernet.py  test_tracking.py
(+1335 files in other folders)
