[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-iot-ids-v3"
version = "0.3.0"
description = "Federated IoT IDS v3 with leakage-safe data pipeline and Flower strategies"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]==1.29.0",
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "mlflow>=2.12,<3.0",
    "packaging<25"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flwr.app]
publisher = "saif-boukhatem"

[tool.flwr.app.components]
serverapp = "src.fl.server_app:app"
clientapp = "src.fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
learning-rate = 0.001
local-epochs = 1
batch-size = 256

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 3
